Añadido capítulo 3 y enlace en index

--- a/mi-libro/index.html
+++ b/mi-libro/index.html
@@ -33,9 +33,8 @@
           <a href="capitulos/capitulo2.html" class="boton">Leer capítulo</a>
         </article>
         <article class="tarjeta">
-          <h3></h3>
-          <p>El regreso</p>
-          <a href="capitulos/capitulo3.html" class="boton">Leer capítulo</a>
+          <h3>Capítulo 3</h3>
+          <a href="../mi-libro/capitulos/capitulo3.html" class="boton">Leer capítulo</a>
         </article>
       </div>
     </section>
